Fixing alignment of sections and adding new background and banner

--- a/design.css
+++ b/design.css
@@ -47,6 +47,8 @@ body {
 section{
   margin-top: 3rem;
   margin-bottom: 3rem;
+  margin-left: 3rem;
+  margin-right: 3rem;
 }
 
 main {
@@ -137,4 +139,19 @@ footer {
   font-weight: normal;
   font-size: 1.2rem;
   text-align: left;
+}
+
+.secondary-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  background-color: #f8eee3; /* brown-cream-yellowish */
+}
+
+.secondary-banner {
+  background-color: #cce3c0;
+
 }
